# sfml-game

./: .gitignore  CMakeLists.txt  README.md
includes/: core.hpp  utility.hpp
sources/: core.cpp  source.cpp
